few changes more like cpm