@@ -1,34 +1,32 @@
 package ar.edu.itba;
 
 import java.io.FileReader;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import com.google.gson.Gson;
 
 public class App {
-    private static Board board;
-    private static Config config;
-    private String configPath = "../config.json";
-    private final static String rootDir = System.getProperty("user.dir");
+    private static final String absPath = System.getProperty("user.dir");
+    private static final String confPath = "../config.json";
+    private static final Gson Gson = new Gson();
 
-    public void setup() {
-        if (!Paths.get(configPath).isAbsolute()) {
-
-            configPath = Paths.get(rootDir, configPath).toString();
-
-        }
-
-        try (FileReader reader = new FileReader(configPath)) {
-            config = new Gson().fromJson(reader, Config.class);
+    public Config setUp() {
+        String filePath = Path.of(absPath, confPath).toString();
+        Config conf = null;
+        try (FileReader reader = new FileReader(filePath)) {
+            conf = Gson.fromJson(reader, Config.class);
         } catch (Exception e) {
             e.printStackTrace();
+            System.exit(1);
         }
-        System.out.println(config);
-        board = new Board(config);
+
+        return conf;
     }
 
     public static void main(String[] args) {
+
         App app = new App();
-        app.setup();
+        Board board = new Board(app.setUp());
         board.run();
+
     }
 }
